--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ko" xml:lang="ko" xmlns="http://www.w3.org/1999/xhtml" translate="">
   <head>
     <meta charset="utf-8" />
-    <title>오늘도 한 걸음 나아가는 거북이 개발자 권지현입니다.</title>
+    <title>오늘도 한 걸음 나아가는 프론트엔드 개발자 권지현입니다.</title>
     <link rel="stylesheet" media="all" href="style1.css" />
     <link rel="stylesheet" media="all" href="style2.css" />
     <link rel="stylesheet" media="all" href="library.css" />
@@ -87,9 +87,7 @@
               <div class="markdown github markdown-viewer description">
                 <div>
                   <p class="keep-all">
-                    전래동화 토끼와 거북이의 거북이처럼 목표를 이루기 위해
-                    느리더라도 꾸준히 한 걸음씩 나아가고 있습니다. 부트캠프 수강 초기에는 블랙홀이라고 불리기도 했지만 두 달 뒤 팀 프로젝트에서 팀장을 맡아 프로젝트를 이끌기도 했습니다.
-                    현재는 개인 프로젝트에서 컴포넌트 세분화와 GraphQL의 장점을 최대한 활용한 코드를 짜기 위해 공부 중입니다.
+                    “거북이는 오늘도 달린다!” 개발 공부를 시작하면서 제가 자주 했던 말입니다. 거북이는 느리지만 꾸준함으로 결국 결승점에 도착하는 것처럼 저 또한 그랬습니다. 개발 공부 초기에 수많은 오류를 내면서 블랙홀이라는 놀림을 받았습니다. 하지만 포기하지 않고 꾸준히 오류를 해결하고 배워나갔습니다. 그 과정을 인정받아 팀 프로젝트를 이끄는 팀장으로 팀원들과 프로젝트를 마무리한 경험이 있습니다. 프론트엔드 개발자 저 권지현은 오늘도 한 걸음 더 나아갑니다.
                   </p>
                 </div>
               </div>
@@ -143,7 +141,7 @@
                     <button class="stack-item">Styled-component</button>
                   </li>
                   <li class="col-item">
-                    <button class="stack-item">Sass</button>
+                    <button class="stack-item">Scss</button>
                   </li>
                   <li class="col-item">
                     <button class="stack-item">Docker</button>
@@ -187,51 +185,36 @@
                   </div>
                   <div class="resume-card-right">
                     <h4 class="resume-card-item-label">
-                      1. 소통의 끝은 새로운 성장의 기회이라고 생각합니다.
+                      1. 소통은 모든 과정의 첫 단추라고 생각합니다.
                     </h4>
                     <div class="markdown github markdown-viewer">
                       <div>
                         <p></p>
                         <p>
-                          지난 6년간 인천 공항에 근무하면서 정해진 시간 내에 업무를 진행하면서 소통의 오류로 동료들과 예상치 못한 문제가 발생하기도 했고, 반대로 말 한마디로 민원인의 오해를 원만하게 처리할 수도 있었습니다. 그 시간은 저에게 의사소통 능력이라는 값진 능력을 가져다주었습니다.
+                          지난 6년간 인천 공항에 근무하면서 다양한 사람들과 소통해왔습니다. 이 과정에서 말 한마디가 오해를 불러오기도 했고, 갈등 해소에 중요한 물꼬를 트기도 했습니다. 그런 상황을 겪으면서 저는 상대방의 의견을 귀 기울여 듣고 정확히 파악한 후에 제 의견을 말하는 방식으로 소통하려고 노력했습니다. 그렇게 점차 오해와 갈등의 빈도가 훨씬 낮아졌고 저 역시 의사소통에 자신감을 가지게 되었습니다.
                         </p>
                         <p>
-                          부트캠프 팀 프로젝트 진행 중 백엔드와의 협업에서
-                          의사소통의 중요성을 또 한 번 깨달았습니다. 명품이라는
-                          주제로 진행하는 프로젝트 특성상 결제 시스템의 안정성을
-                          높여야 한다고 생각했던 저는 구매자가 구매 확정을 한 후
-                          판매자에게 결제 완료를 알리는 방식을 원했고, 백엔드에서는 결제가 진행되는 순간 관련 데이터가 저장되어야 해서 구매 확정을 기다리는 동안 데이터를 처리하는 과정에 어려움이 있다는 의견 차이가 있었습니다. 구매 확정
-                          전까지 관리자 계정을 통해 결제를 진행하는 방식으로
-                          절충안을 내기까지 하루에 2번 이상의 회의를 거치곤
-                          했습니다. 하지만 타 직군에 대해 조금 더 이해하고
-                          협업이 무엇인지 확실히 느끼게 된 값진
-                          경험이었습니다.
+                          이 경험은 팀장으로 팀 프로젝트를 이끌어가는 데에도 큰 도움이 됐습니다.
+하나의 기능을 결정하더라도 팀원 모두의 생각을 들어보고 서로가 정확히 이해했는지 확인하는 과정을 가장 우선순위로 두었습니다. 백엔드에서 어떻게 데이터를 다루는지 설명하면 프론트엔드 입장에서 정확히 이해했는지 확인하고 의견을 조율하는 과정을 통해 서로를 조금 더 이해하게 되었습니다. 프로젝트 후반에는 습관처럼 서로의 코드를 설명하고 의논하면서 목표한 방향으로 개발을 해나갈 수 있었습니다. 
+원활한 의사소통 덕분에 팀 프로젝트의 첫 단추를 잘 끼워 목표한 프로젝트를 마무리 지을 수 있었다고 생각합니다.
                         </p>
                       </div>
                     </div>
                     <br />
                     <h4 class="resume-card-item-label">
-                      2. 하나의 기능이라도 스스로 직접 구현하려는 자세를 가지고 있습니다. 
+                      2. 끝없는 고민은 진정한 개발자를 만든다고 생각합니다. 
                     </h4>
                     <div class="markdown github markdown-viewer">
                       <div>
                         <p>
-                          부트캠프를 수강하면서 단지 코드를 이해하고 잘 짜여진
-                          코드를 따라 할 수 있으면 된다고 생각했었습니다. 여러
-                          가지 기능들을 숙지하고 구현하는 과정에서 global
-                          state를 무더기로 넣어 이미 들어간 다른 데이터에 영향을
-                          끼쳐 페이지가 무한 렌더링 되거나 이미지 업로드 기능을
-                          구현하기 위해 컴포넌트를 나누면서 정확히 데이터가
-                          어떻게 전달되는지 숙지하지 않은 채로 기능 구현에만 몰두하는 등 이유없이 작성한 코드는 제 능력이 아니라고
-                          느꼈습니다.
+                          개발 공부를 처음 시작했을 때는 단순히 기능 구현만을 목표로 코드를 작성한 적이 있습니다.
+배운 내용을 활용해야겠다는 마음만 앞서 global state를 남발해서 화면이 무한 렌더링 되기도 했습니다.
+그 오류를 잡기 위해 동기들과 함께 의논하면서 제 코드를 설명해야 할 순간에도 제대로 설명하지 못하는 저를 보면서 ‘기계적으로 결과만 만들어내고 있었구나...’ 하고 깨닫게 되었습니다.
                         </p>
-                        <p>
-                          함께 공부하는 동기들과 서로의 코드를 리뷰하고
-                          접해보면서 제 코드를 다시 돌아보게 되었고 이 경험을
-                          통해 정해진 답을 따라 하는 게 아니라 한 줄을 적더라도
-                          스스로 이해하고 왜 이런 로직을 짰는지 본인의 코드를
-                          설명할 수 있는 사람이 진정한 개발자, 프로그래머로
-                          성장할 수 있다고 생각합니다.
+                        <p>이후에는 하나의 기능을 만든다고 하더라도 스스로 고민해서 코드를 작성해야겠다고 다짐했습니다.
+                          왜 이렇게 코드를 작성했는지, 작성한 코드가 화면에 어떻게 보일지, 효율적으로 데이터를 활용할 수 있을지 고민하기 시작했습니다.
+                          어떻게 하면 만들어놓은 컴포넌트를 최대한 활용해서 유지 보수를 수월하게 할까 고민해보기도 하고, 검색이라는 하나의 기능을 구현한다고 했을 때 배운 방법 외에 다른 방법을 찾아보고 반복해서 다시 작성해보기도 했습니다. 온전히 직접 고민하고 코드를 짠 후에야 그 결과가 저의 실력이 될 수 있다는 걸 느낄 수 있었습니다.
+                          단 한 줄의 코드를 작성하더라도 꾸준히 고민하고 시도하는 사람이 진정한 개발자로 성장할 수 있다고 생각합니다.
                         </p>
                         <p>&nbsp</p>
                       </div>
@@ -272,7 +255,7 @@
                       <li>Docker</li>
                     </ul>
                     <h5 class="resume-card-item-text">
-                      젊은 층에서 명품 소비가 늘어남에 따라 명품에 대한 진입 장벽을 낮추어 명품을 친근하게 거래할 수 있도록 만든 서비스
+                      명품 소비의 연령층이 낮아짐에 따라 명품에 대한 진입 장벽을 낮추고 명품을 친근하게 거래할 수 있도록 만든 서비스
                     </h5>
                     <br />
                     <div class="markdown github markdown-viewer">
@@ -306,7 +289,7 @@
                       </li>
                       <li class="list-contribution-item">
                         <i class="fas fa-comment"> 포트폴리오 URL </i>
-                        <a
+                        <a class="blue"
                           href="https://holly-legume-3d3.notion.site/Youth-Luxury-453b45f6c5a946569d4695218a6355f9"
                           target="_blank"
                           rel="noopener"
@@ -379,7 +362,7 @@
                       </li>
                       <li class="list-contribution-item">
                         <i class="fas fa-comment"> 포트폴리오 URL </i>
-                        <a
+                        <a class="blue"
                           href="https://holly-legume-3d3.notion.site/Share-Ground-8203bac3918e4e68a151886fff65e60a"
                           target="_blank"
                           rel="noopener"
