--- a/skill.html
+++ b/skill.html
@@ -7,7 +7,7 @@
   translate=""
 >
   <head>
-    <title>오늘도 한 걸음 나아가는 거북이 개발자 권지현입니다.</title>
+    <title>오늘도 한 걸음 나아가는 프론트엔드 개발자 권지현입니다.</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" media="all" href="./app.css" />
     <link rel="stylesheet" media="all" href="./library.css" />
@@ -67,7 +67,7 @@
                         <p> 가입을 위해 setTimeout, 정규표현식으로 기본 입력 제한 및 검증 </p>
                       </div>
                       <ul class="tags">
-                        <li class="tag">React</li>
+                        <li class="tag bg-blue">React</li>
                         <li class="tag">Next.js</li>
                         <li class="tag">JavaScript</li>
                         <li class="tag">TypeScript</li>
